add tweets web page

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div class="container">
+        <nav class="main-nav">
+            <a href="/" class="active">Authors</a>
+            <a href="/tweets" >Tweets</a>
+        </nav>
         <h1>Author Summarization Dashboard</h1>
         <div class="main-content">
             <div id="authors" class="authors-list"></div>
